# separate-then-together

./: AGENTS.md  CASE_STUDY.md  README.md  generate_report_from_json.py  main.py  pyproject.toml
docs/: SUMMARY.md  index.html
examples/: basic_usage.py  software_engineering.py
src/separate_then_together/: __init__.py  agent.py  agent_v2.py  cli.py  config.py  persona.py  report.py  session.py  strategies.py
tests/: test_agent.py  test_persona.py  test_session.py  test_strategies.py
